@startuml entity-relation

title MVP

skinparam linetype ortho

entity "Stores" {
*id
--
Name
Address
Postcode
City
Siren
Siret
}

entity "Stock" {
*id
--
Quantity
--
Products_id <<FK>>
}

entity "Suppliers" {
*id
--
Name
Address
Postcode
City
Telephone
}

entity "Products" {
*id
--
Name
Code
Price
Picture
Nutriscore
Ecoscore
Quantity
Ingredients
--
Brands_id <<FK>>
Stores_id <<FK>>
}

entity "Categories" {
*id
--
Name
--
Aisles_id <<FK>>
}

entity "Products_Categories" {
*id
--
Categories_id <<FK>>
Products_id <<FK>>
}

entity "Products_Suppliers" {
*id
--
Purchase_price
--
Suppliers_id <<FK>>
Products_id <<FK>>
}

entity "Aisles" {
*id
--
Name
}

entity "Roles" {
*id
--
Name
}


entity "Roles_aisles" {
*id
--
Aisles_id <<FK>>
Roles_id <<FK>>
}

entity "Users" {
*id
--
FirstName
LastName
Mail
Password
--
Roles_id <<FK>>
Stores_id <<FK>>
}

' entity "Orders" {
' *id
' --
' Users_id <<FK>>
' }

' entity "Orders_details" {
' *id
' --
' Quantity
' --
' Orders_id <<FK>>
' Suppliers_id <<FK>>
' Products_id <<FK>>
' }

entity "Brands" {
*id
--
Name
}


Stock }o..|| Products

' Orders_details }o..|| Suppliers
' Orders_details }o..|| Products
' Orders_details }o..|| Orders

Users }o..|| Roles
Users }o..|| Stores
' Orders }o..|| Users


Aisles ||..o{ Categories
Roles_aisles }o..|| Roles
Roles_aisles }o..|| Aisles


Products ||..o{ Products_Categories
Categories ||..o{ Products_Categories
Products ||..o{ Products_Suppliers
Suppliers ||..o{ Products_Suppliers
Products }o..|| Brands
Products }o..|| Stores


@enduml
